--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,6 +1,6 @@
 name: "🚀 Feature Request"
 description: "I have a great suggestion!"
-labels: ["feature request"]
+labels: ["enhancement"]
 body:
   - type: markdown
     attributes:
